NYT data without index column

--- a/NYT_Cleaning.ipynb
+++ b/NYT_Cleaning.ipynb
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -1115,7 +1115,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>text</th>\n",
        "      <th>section_name</th>\n",
        "      <th>date</th>\n",
@@ -1126,7 +1125,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>Times Square, the famed Manhattan crossroads, ...</td>\n",
        "      <td>Americas</td>\n",
        "      <td>2016-11-09T23:40:37Z</td>\n",
@@ -1135,7 +1133,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>New York City’s Education Department said on W...</td>\n",
        "      <td></td>\n",
        "      <td>2016-11-09T23:32:56Z</td>\n",
@@ -1144,7 +1141,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>CONCORD, N.H. — New Hampshire Gov. Maggie Hass...</td>\n",
        "      <td>Politics</td>\n",
        "      <td>2016-11-09T23:23:23Z</td>\n",
@@ -1153,7 +1149,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>(Want to get this briefing by email? Here’s th...</td>\n",
        "      <td></td>\n",
        "      <td>2016-11-09T23:05:52Z</td>\n",
@@ -1162,7 +1157,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>On May 4, 1963, the Rolling Stones, then a scr...</td>\n",
        "      <td></td>\n",
        "      <td>2016-11-09T23:04:08Z</td>\n",
@@ -1174,12 +1168,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   index                                               text section_name  \\\n",
-       "0      1  Times Square, the famed Manhattan crossroads, ...     Americas   \n",
-       "1      2  New York City’s Education Department said on W...                \n",
-       "2      3  CONCORD, N.H. — New Hampshire Gov. Maggie Hass...     Politics   \n",
-       "3      4  (Want to get this briefing by email? Here’s th...                \n",
-       "4      5  On May 4, 1963, the Rolling Stones, then a scr...                \n",
+       "                                                text section_name  \\\n",
+       "0  Times Square, the famed Manhattan crossroads, ...     Americas   \n",
+       "1  New York City’s Education Department said on W...                \n",
+       "2  CONCORD, N.H. — New Hampshire Gov. Maggie Hass...     Politics   \n",
+       "3  (Want to get this briefing by email? Here’s th...                \n",
+       "4  On May 4, 1963, the Rolling Stones, then a scr...                \n",
        "\n",
        "                   date                                              title  \\\n",
        "0  2016-11-09T23:40:37Z  In New York, Deep Confusion Stands in Contrast...   \n",
@@ -1196,7 +1190,7 @@
        "4      1  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,19 +1198,20 @@
    "source": [
     "df_all_ren = df_all.rename(columns={'body': 'text', 'pub_date': 'date', 'head_clean': 'title'})\n",
     "df_all_ren['class'] = np.ones(len(df_all_ren), dtype=int)\n",
+    "df_all_ren = df_all_ren.drop('index', 1)\n",
     "df_all_ren.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Saving the clean data to csv file\n",
-    "df_all_ren.to_csv(\"nyt_unclean.csv\", encoding='utf-8')"
+    "df_all_ren.to_csv(\"nyt_unclean.csv\", encoding='utf-8', index=False)"
    ]
   },
   {
