Removed index column from merged data

--- a/Feature extraction.ipynb
+++ b/Feature extraction.ipynb
@@ -2987,7 +2987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2998,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3157,7 @@
        "4     0.071     0.865     0.064         0.004972  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3165,12 +3165,13 @@
    "source": [
     "guardian_feat_merged.rename(columns={'CountofExclaimation': 'CountofExclamation'},\\\n",
     "                            inplace=True)\n",
-    "guardian_feat_merged.head()\n"
+    "guardian_feat_merged.to_csv(\"FeatureEngineering/GuardianFeatures_merged.csv\")\n",
+    "guardian_feat_merged.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -3323,7 +3324,7 @@
        "4     0.887     0.029         0.004253  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3331,12 +3332,13 @@
    "source": [
     "nyt_feat_merged.rename(columns={'CountofExclaimation': 'CountofExclamation'},\\\n",
     "                            inplace=True)\n",
-    "nyt_feat_merged.head()\n"
+    "nyt_feat_merged.to_csv(\"FeatureEngineering/NytFeatures_merged.csv\")\n",
+    "nyt_feat_merged.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -3489,7 +3491,7 @@
        "4     0.793     0.077         0.004773  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3497,12 +3499,13 @@
    "source": [
     "fake_feat_merged.rename(columns={'CountofExclaimation': 'CountofExclamation'},\\\n",
     "                            inplace=True)\n",
+    "fake_feat_merged.to_csv(\"FeatureEngineering/fakeFeatures_merged.csv\")\n",
     "fake_feat_merged.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
